kubernetes/apps/security/vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: security
spec:
  type: ClusterIP
  selector:
    app: vaultwarden
  ports:
    - port: 80
      targetPort: 80
